--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Pyxelコンテンツ<BR>
 Pyxel (ピクセル) は Python 向けのレトロゲームエンジン。<BR>
 <A href="https://github.com/kitao/pyxel/blob/main/docs/README.ja.md">Pyxel公式サイト</A><BR>
 <BR>
+<A href="./pyxel_experiment.html">Pyxel実験室</A><BR>
+<BR>
 <table border="1" style="border-collapse: collapse; border-color: #888888">
 
 <thead>
