--- a/pyxel_experiment.html
+++ b/pyxel_experiment.html
@@ -132,7 +132,7 @@ Rキーで初期画面に戻る<BR>
 更新履歴<BR>
 2024.09.29 ver.2.0公開<BR>
 </td>
-<td><center><img src="png/mandelzoom2.png"  width="512" height="512" border="0" class="image"></center></td>
+<td><center><img src="gif/mandelzoom2.gif"  width="512" height="512" border="0" class="image"></center></td>
 </tr>
 
 <tr>
