--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ Pyxel (ピクセル) は Python 向けのレトロゲームエンジン。<BR>
 <BR>
 <A href="./pyxel_experiment.html">Pyxel実験室</A><BR>
 <BR>
+<A href="./pyxel/base.html">TEST-base</A><BR>
+<BR>
 <table border="1" style="border-collapse: collapse; border-color: #888888">
 
 <thead>
